Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2973047 by idebr, drunken monkey: Fixed misnamed test config files.
- #2860167 by drunken monkey, borisson_, fenstrat: Added "orderby" to our
  config schema definitions.
- #2948820 by capysara, drunken monkey, borisson_: Added a link to the "need to
  reindex" message on the Filters tab.
- #2965803 by capysara, drunken monkey: Fixed left-over use of @url placeholder.
- #2957650 by drunken monkey, borisson_: Fixed two minor problems.
- #2939010 by nedjo, drunken monkey: Fixed deleted fields when index is created
  during module install.
- #2931730 by drunken monkey, borisson_, chanderbhushan: Adapted to changes in
  drupal_set_message().
- #2955607 by drunken monkey, borisson_: Removed our custom Query::__wakeup()
  work-around.
- #2940138 by drunken monkey, borisson_: Switched to new Core tempstore service.
- #2936630 by drunken monkey, borisson_: Adapted override detection code to use
  Config::hasOverrides().
- #2961537 by drunken monkey: Increased Core dependency to Drupal 8.5.
- #2959809 by drunken monkey, Rob230, mkalkbrenner, borisson_: Fixed small
  coding mistake in the "URL field" processor.
- #2960931 by drunken monkey, borisson_: Fixed viewing of multiple content
  entity items.

Search API 1.8 (2018-04-16):
----------------------------
- #2960854 by nedjo, drunken monkey: Fixed "Database search defaults" index.
- #2930839 by drunken monkey: Update tests according to latest PHPUnit
  compatibility changes
- #2921022 by drunken monkey, marcvangend: Fixed automatic task execution with
  Drush.
- #2955887 by drunken monkey, borisson_: Added a way to re-execute a query.
- #2925464 by drunken monkey, borisson_, .jch: Fixed problem with missing "NOT
  NULL" attribute in database backend.
- #2953266 by drunken monkey, borisson_: Added a helper method for
  "selected"/"default" checks.
- #2953267 by drunken monkey, borisson_: Fixed REST dependency of Views test
  module.