@@ -669,12 +669,12 @@ class Database extends BackendPluginBase implements PluginFormInterface {
     // A DB prefix might further reduce the maximum length of the table name.
     $max_bytes = 62;
     if ($db_prefix = $this->database->tablePrefix()) {
-      // Use strlen() instead of Unicode::strlen() since we want to measure
-      // bytes, not characters.
+      // Use strlen() instead of mb_strlen() since we want to measure bytes, not
+      // characters.
       $max_bytes -= strlen($db_prefix);
     }
 
-    $base = $table = Unicode::truncateBytes($prefix . Unicode::strtolower(preg_replace('/[^a-z0-9]/i', '_', $name)), $max_bytes);
+    $base = $table = Unicode::truncateBytes($prefix . mb_strtolower(preg_replace('/[^a-z0-9]/i', '_', $name)), $max_bytes);
     $i = 0;
     while ($this->database->schema()->tableExists($table)) {
       $suffix = '_' . ++$i;
@@ -703,7 +703,7 @@ class Database extends BackendPluginBase implements PluginFormInterface {
   protected function findFreeColumn($table, $column) {
     $maxbytes = 62;
 
-    $base = $name = Unicode::truncateBytes(Unicode::strtolower(preg_replace('/[^a-z0-9]/i', '_', $column)), $maxbytes);
+    $base = $name = Unicode::truncateBytes(mb_strtolower(preg_replace('/[^a-z0-9]/i', '_', $column)), $maxbytes);
     // If the table does not exist yet, the initial name is not taken.
     if ($this->database->schema()->tableExists($table)) {
       $i = 0;
@@ -1268,7 +1268,7 @@ class Database extends BackendPluginBase implements PluginFormInterface {
 
             // Store the first 30 characters of the string as the denormalized
             // value.
-            if (Unicode::strlen($denormalized_value) < 30) {
+            if (mb_strlen($denormalized_value) < 30) {
               $denormalized_value .= $word . ' ';
             }
 
@@ -1276,7 +1276,7 @@ class Database extends BackendPluginBase implements PluginFormInterface {
             if (is_numeric($word)) {
               $word = ltrim($word, '-0');
             }
-            elseif (Unicode::strlen($word) < $this->configuration['min_chars']) {
+            elseif (mb_strlen($word) < $this->configuration['min_chars']) {
               continue;
             }
 
@@ -1300,7 +1300,7 @@ class Database extends BackendPluginBase implements PluginFormInterface {
               $unique_tokens[$word_base_form]['score'] += $score;
             }
           }
-          $denormalized_values[$column] = Unicode::substr(trim($denormalized_value), 0, 30);
+          $denormalized_values[$column] = mb_substr(trim($denormalized_value), 0, 30);
           if ($unique_tokens) {
             $field_name = static::getTextFieldName($field_id);
             $boost = $field_info['boost'];
@@ -1426,9 +1426,9 @@ class Database extends BackendPluginBase implements PluginFormInterface {
           }
           foreach (static::splitIntoWords($text) as $word) {
             if ($word) {
-              if (Unicode::strlen($word) > 50) {
+              if (mb_strlen($word) > 50) {
                 $this->getLogger()->warning('An overlong word (more than 50 characters) was encountered while indexing: %word.<br />Since database search servers currently cannot index words of more than 50 characters, the word was truncated for indexing. If this should not be a single word, please make sure the "Tokenizer" processor is enabled and configured correctly for index %index.', ['%word' => $word, '%index' => $index->label()]);
-                $word = Unicode::substr($word, 0, 50);
+                $word = mb_substr($word, 0, 50);
               }
               $tokens[] = new TextToken($word);
             }
@@ -1440,12 +1440,12 @@ class Database extends BackendPluginBase implements PluginFormInterface {
               // Check for over-long tokens.
               $score = $token->getBoost();
               $word = $token->getText();
-              if (Unicode::strlen($word) > 50) {
+              if (mb_strlen($word) > 50) {
                 $new_tokens = [];
                 foreach (static::splitIntoWords($word) as $word) {
-                  if (Unicode::strlen($word) > 50) {
+                  if (mb_strlen($word) > 50) {
                     $this->getLogger()->warning('An overlong word (more than 50 characters) was encountered while indexing: %word.<br />Since database search servers currently cannot index words of more than 50 characters, the word was truncated for indexing. If this should not be a single word, please make sure the "Tokenizer" processor is enabled and configured correctly for index %index.', ['%word' => $word, '%index' => $index->label()]);
-                    $word = Unicode::substr($word, 0, 50);
+                    $word = mb_substr($word, 0, 50);
                   }
                   $new_tokens[] = new TextToken($word, $score);
                 }
@@ -1465,8 +1465,8 @@ class Database extends BackendPluginBase implements PluginFormInterface {
         if ($original_type == 'date') {
           return date('c', $value);
         }
-        if (Unicode::strlen($value) > 255) {
-          $value = Unicode::substr($value, 0, 255);
+        if (mb_strlen($value) > 255) {
+          $value = mb_substr($value, 0, 255);
           $this->getLogger()->warning('An overlong value (more than 255 characters) was encountered while indexing: %value.<br />Database search servers currently cannot index such values correctly – the value was therefore trimmed to the allowed length.', ['%value' => $value]);
         }
         return $value;
@@ -1792,7 +1792,7 @@ class Database extends BackendPluginBase implements PluginFormInterface {
       if (is_numeric($processed_keys)) {
         return ltrim($processed_keys, '-0');
       }
-      elseif (Unicode::strlen($processed_keys) < $this->configuration['min_chars']) {
+      elseif (mb_strlen($processed_keys) < $this->configuration['min_chars']) {
         $this->ignored[$keys] = 1;
         return NULL;
       }
@@ -2548,8 +2548,8 @@ class Database extends BackendPluginBase implements PluginFormInterface {
 
     // Make the input lowercase as the indexed data is (usually) also all
     // lowercase.
-    $incomplete_key = Unicode::strtolower($incomplete_key);
-    $user_input = Unicode::strtolower($user_input);
+    $incomplete_key = mb_strtolower($incomplete_key);
+    $user_input = mb_strtolower($user_input);
 
     // Decide which methods we want to use.
     if ($incomplete_key && $settings['suggest_suffix']) {
